pillar level and new lcasification, not all

--- a/levels/level0.html
+++ b/levels/level0.html
@@ -29,11 +29,38 @@
       </nav>
     </header>
 
+    <div class="level-classification">
+  <div class="lc-left">
+    <div class="lc-label">LEVEL</div>
+    <div class="lc-number">0</div>
+    <div class="lc-bars"></div>
+  </div>
+
+  <div class="lc-middle">
+    <div class="lc-title">SURVIVAL DIFFICULTY</div>
+    <div class="lc-class">2</div>
+  </div>
+
+  <div class="lc-right">
+    <div class="lc-card red">
+      <div class="lc-card-title">Exit: 1/5</div>
+      <div class="lc-card-sub">Not difficult to exit.</div>
+    </div>
+
+    <div class="lc-card red">
+      <div class="lc-card-title">Environment: 2/5</div>
+      <div class="lc-card-sub">Low environment risk.</div>
+    </div>
+
+    <div class="lc-card red">
+      <div class="lc-card-title">Entities: 3/5</div>
+      <div class="lc-card-sub">Moderate entity threat.</div>
+    </div>
+  </div>
+</div>
+
     <main class="level-page">
       <div class="text-column">
-        <h2>Level 0 - "The Infinite Hallways"</h2>
-        <p class="survival-class"><strong>Survival Difficulty:</strong> Class 3 — Moderately Safe | High amount of common Resources | Bacterium life-forms Presence</p>
-
         <section>
           <h3>Description</h3>
           <p>
