--- a/levels/olympus.html
+++ b/levels/olympus.html
@@ -29,11 +29,39 @@
       </nav>
     </header>
 
+    <div class="level-classification">
+  <div class="lc-left">
+    <div class="lc-label">LEVEL</div>
+    <div class="lc-number">???.1</div>
+    <div class="lc-bars"></div>
+  </div>
+
+  <div class="lc-middle">
+    <div class="lc-title">SURVIVAL DIFFICULTY</div>
+    <div class="lc-class">0</div>
+  </div>
+
+  <div class="lc-right">
+    <div class="lc-card red">
+      <div class="lc-card-title">Exit: 1/5</div>
+      <div class="lc-card-sub">Not difficult to exit.</div>
+    </div>
+
+    <div class="lc-card red">
+      <div class="lc-card-title">Environment: 1/5</div>
+      <div class="lc-card-sub">Minimal environment risk.</div>
+    </div>
+
+    <div class="lc-card red">
+      <div class="lc-card-title">Entities: 0/5</div>
+      <div class="lc-card-sub">No entities present.</div>
+    </div>
+  </div>
+</div>
+
     <main class="level-page">
       <div class="text-column">
-        <h2>Level ???.1 - "Olympus"</h2>
-        <p class="survival-class"><strong>Survival Difficulty:</strong> Class 0 — Safe | No Resources | 1 Rare Entity Presence</p>
-
+        
         <section>
           <h3>Description</h3>
           <p>
