--- a/levels/sub_besement.html
+++ b/levels/sub_besement.html
@@ -29,17 +29,39 @@
       </nav>
     </header>
 
-    <main class="level-page">
-      <div class="text-column">
-        <h2>Level ⌘ - "Sub Besement"</h2>
-        <p class="survival-class"><strong>Survival Difficulty:</strong> Class 4 — Unsafe | Very rare resources presence | Enigmatic life-forms present</p>
+    <div class="level-classification">
+  <div class="lc-left">
+    <div class="lc-label">LEVEL</div>
+    <div class="lc-number">???.1</div>
+    <div class="lc-bars"></div>
+  </div>
 
+  <div class="lc-middle">
+    <div class="lc-title">SURVIVAL DIFFICULTY</div>
+    <div class="lc-class">⌘</div>
+  </div>
+
+  <div class="lc-right">
+    <div class="lc-card red">
+      <div class="lc-card-title">Exit: 2/5</div>
+      <div class="lc-card-sub">It's a bit difficult to find the exit.</div>
+    </div>
+
+    <div class="lc-card red">
+      <div class="lc-card-title">Environment: 1/5</div>
+      <div class="lc-card-sub">Minimal environment risk.</div>
+    </div>
+
+    <div class="lc-card red">
+      <div class="lc-card-title">Entities: 3/5</div>
+      <div class="lc-card-sub">Moderate risk of entities risk.</div>
+    </div>
+  </div>
+</div>
+
+     <main class="level-page">
+      <div class="text-column">
         <section>
-          <h3>Description</h3>
-          <p>
-            Level ⌘, commonly known as <em>"INFORMATION OMMITED"</em> or <em>"Sub Besement"</em> within the survivor community, is a level with very chaotic infrastructure. Mannequins can be found around the level. The only known way get here is using pale key on level <a href="abyss.html">Abyss.</a>
-          </p>
-        </section>
 
         <section>
           <h3>Piano room</h3>
@@ -84,9 +106,10 @@
           <p>
           High risk high reward area.
           </p>
-          
+          <p>
+          This is normal text, <span class="custom">AMOGUS</span>.
+          </p>
         </section>
-
       </div>
 
       <div class="image-column">
