--- a/levels/pillar.html
+++ b/levels/pillar.html
@@ -109,7 +109,7 @@
         <section>
           <h3>Additional Notes</h3>
           <p>
-            Use light sparingly — fog on this level reflects brightness unpredictably.
+            Expedition requied nearest future.
           </p>
         </section>
 
@@ -129,4 +129,5 @@
   </div>
 
 </body>
+
 </html>
