--- a/entities.html
+++ b/entities.html
@@ -95,17 +95,16 @@
       <div class="entity-group">
         <h3>GROUP-006 "Crinitus Cimex"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">006-A | Blunky [WIP]</a></li>
-          <li><a href="404.html">006-B | Tanky [WIP]</a></li>
+          <li><a href="entities/blanky.html">006-A | Blanky</a></li>
+          <li><a href="entities/tanky.html">006-B | Tanky</a></li>
         </ul>
       </div>
 
       <div class="entity-group">
         <h3>GROUP-XXX "Uncategorized"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">XXX-A | Butcher [WIP]</a></li>
+          <li><a href="entities/butcher.html">XXX-A | Butcher</a></li>
           <li><a href="404.html">XXX-B | Orblings [WIP]</a></li>
-          <li><a href="404.html">XXX-C | Butcher [WIP]</a></li>
         </ul>
       </div>
 
