--- a/entities/butcher.html
+++ b/entities/butcher.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Butcher - Entity File</title>
+  <title>The Butcher - Limbo HUB</title>
   <link rel="stylesheet" href="../styles/main.css" />
   <style>
     .entity-description {
@@ -86,9 +86,8 @@
 
           <h3>Known Locations</h3>
           <ul>
-            <li><strong>Level 0 Sub-Regions:</strong> Extremely Rare sightings. There has only been 1 report on a Butcher being in Motel Depot.</li>
-            <li><strong>Brutalist Level:</strong> Frequent and dangerous encounters</li>
-            <li><strong>Brick Level:</strong> Frequent and dangerous encounters</li>
+            <li><strong>Most level:</strong> Butcher can acces to mostly all levels.</li>
+            <li><strong>Brutalist and BrickLevel:</strong> Seen most of time.</li>
           </ul>
 
           <h3>Notes</h3>
