--- a/entities/dissector.html
+++ b/entities/dissector.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dissector - Creature Description</title>
+  <title>Dissector - Limbo HUB</title>
   <link rel="stylesheet" href="../styles/main.css" />
   <style>
     .creature-description {
