--- a/factions/alleycats.html
+++ b/factions/alleycats.html
@@ -33,7 +33,7 @@
         </blockquote>
 
         <p>
-          <strong>The Alleycats</strong> are an independent, reclusive faction located within the mysterious and dangerous <strong>Brick Level</strong>. Unlike the chaos of Level 0 where power struggles and paranoia rule—the Alleycats have created something rare: stability.
+          <strong>The Alleycats</strong> are an independent, reclusive faction located within the mysterious and dangerous <strong>Brick Level</strong>. Unlike the chaos of Level 0 where power struggles and paranoia rule the Alleycats have created something rare: stability.
         </p>
 
         <section>
@@ -50,9 +50,7 @@
         <section>
           <h3>Philosophy</h3>
           <ul>
-            <li><strong>Isolation as Strength:</strong> Separation from the wars of greater factions has allowed them to focus inward, building a life of quiet rebellion.</li>
-            <li><strong>Redemption through Unity:</strong> Those society rejected are given purpose and shelter—if they prove themselves.</li>
-            <li><strong>Freedom through Sacrifice:</strong> Progress is hard-won. The Alleycats respect loss and honor the fallen.</li>
+            <li><strong>Even when the progress is hard-worth, alleycats are ready to sacrifice for their faction.</li>
           </ul>
         </section>
 
@@ -61,7 +59,7 @@
           <ul>
             <li><strong>Pathfinders:</strong> Veterans who guide others into and out of Brick safely. Often seen with patched coats and red cloths tied to their arms.</li>
             <li><strong>Brickborn:</strong> Hardened defenders of the Alleycats' territory. They know every corner, and they never leave it undefended.</li>
-            <li><strong>Fixers:</strong> Engineers and medics who keep their world alive—repairing systems, treating wounds, and building new life from ruins.</li>
+            <li><strong>Fixers:</strong> Engineers and medics who keep their world alive repairing systems, treating wounds, and building new life from ruins.</li>
           </ul>
         </section>
 
