--- a/factions/async.html
+++ b/factions/async.html
@@ -33,7 +33,7 @@
 
     <p>While their goals remain unclear, it is believed that Async is utilizing the Backrooms as a storage and housing facility. Their outposts have grown significantly in recent months. The methods they used to enter remain undisclosed.</p>
 
-    <p>If you encounter them, <strong>use caution</strong>. In some cases, trades are possible — they show interest in <strong>gold, silver, and placeable light sources</strong>. However, provocation may lead to confrontation.</p>
+    <p>If you encounter them, <strong>use caution</strong>. In some cases, trades are possible, they show interest in <strong>gold, silver, and placeable light sources</strong>. However, provocation may lead to confrontation.</p>
 
     <section>
       <h3>Known Ranks within Async</h3>
