--- a/factions/confer.html
+++ b/factions/confer.html
@@ -31,7 +31,7 @@
 
         <p><strong>Confer Entente</strong> is a semi-militant, survivalist collective that formed in response to the psychological decay and despair that the Backrooms inflict on wanderers. They are bound together by a shared belief in confronting fear head-on and aiding others who have lost hope.</p>
 
-        <p>Emerging from the shadows of silent corridors and flickering lights, the Entente positions itself as a hand reaching through the void — guiding the lost, empowering the weak, and uniting those ready to fight for life, not just survive it.</p>
+        <p>Emerging from the shadows of silent corridors and flickering lights, the Entente positions itself as a hand reaching through the void guiding the lost, empowering the weak, and uniting those ready to fight for life, not just survive it.</p>
 
         <blockquote style="border-left: 4px solid #d13737; padding-left: 10px; margin: 20px 0;">
           <em>“Bloodied hands build sturdy roads.”</em>
@@ -42,7 +42,7 @@
           <ul>
             <li><strong>Courage through unity:</strong> Fear is natural, but it must not rule us. The Entente trains its members to resist mental collapse and face danger with resolve.</li>
             <li><strong>Survival through strength:</strong> The group values physical and tactical strength, often organizing defensive drills and rescue expeditions for lost wanderers.</li>
-            <li><strong>Light in darkness:</strong> Wherever they settle, they construct temporary "beacons" — brightly lit, safe rest stops filled with murals, poetry, and shared resources.</li>
+            <li><strong>Light in darkness:</strong> Wherever they settle, they construct temporary "beacons" - brightly lit, safe rest stops filled with murals, poetry, and shared resources.</li>
           </ul>
         </section>
 
